--- a/Cakee-main/package.json
+++ b/Cakee-main/package.json
@@ -2,7 +2,6 @@
   "name": "foodcort",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "@tanstack/react-query": "^5.74.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,6 +19,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^11.0.5",
     "Router": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
